# py-cache

./: .gitignore  main.py  pyproject.toml
src/py_cache/: __about__.py  __init__.py  cache.py
