[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "py-cache"
dynamic = ["version"]
description = ''
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
keywords = []
authors = [
  { name = "Sam Thorold", email = "sam.thorold@gmail.com" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
]
dependencies = [
  "aiosqlite"
]

[project.urls]
Documentation = "https://github.com/unknown/py-cache#readme"
Issues = "https://github.com/unknown/py-cache/issues"
Source = "https://github.com/unknown/py-cache"

[tool.hatch.version]
path = "src/py_cache/__about__.py"

[tool.hatch.envs.default]
dependencies = [
  "coverage[toml]>=6.5",
  "pytest",
]
[tool.hatch.envs.default.scripts]
test = "pytest {args:tests}"
test-cov = "coverage run -m pytest {args:tests}"
cov-report = [
  "- coverage combine",
  "coverage report",
]
cov = [
  "test-cov",
  "cov-report",
]

[[tool.hatch.envs.all.matrix]]
python = ["3.11", "3.12"]

[tool.hatch.envs.types]
dependencies = [
  "mypy>=1.0.0",
]
[tool.hatch.envs.types.scripts]
check = "mypy --install-types --non-interactive {args:src/py_cache tests}"

[tool.coverage.run]
source_pkgs = ["py_cache", "tests"]
branch = true
parallel = true
omit = [
  "src/py_cache/__about__.py",
]

[tool.coverage.paths]
py_cache = ["src/py_cache", "*/py-cache/src/py_cache"]
tests = ["tests", "*/py-cache/tests"]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]
